Avoid layout shift..

--- a/css/schwermetallband.css
+++ b/css/schwermetallband.css
@@ -51,7 +51,7 @@ img.bandlogo {
 	max-width: 60%;
 	width: 1933px;
 	height: 1088px;
-	object-fit: scale-down;
+	object-fit: contain;
 }
 .topNav {
 	top: 0;
